fix(avatar): include ix-component mixin to apply scrollbar styling

--- a/packages/core/src/components/avatar/avatar.scss
+++ b/packages/core/src/components/avatar/avatar.scss
@@ -11,8 +11,10 @@
 @import 'mixins/text-truncation';
 @import 'mixins/hover';
 @import './../button/button-mixin';
+@import 'mixins/shadow-dom/component';
 
 :host {
+  @include ix-component;
   display: flex;
   position: relative;
   width: fit-content;
